# mathics-django

./: .coveragerc  .editorconfig  .gitignore  .pep8  .pre-commit-config.yaml  AUTHORS.txt  CHANGES.rst  COPYING.txt  ChangeLog-spell-corrected.diff  MANIFEST.in  Makefile  README.rst  package.json  pyproject.toml  requirements-full.txt  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: autoblack.yml  isort-and-black-checks.yml  macos.yml  osx.yaml  ubuntu.yml  windows.yaml  windows.yml
admin-tools/: .gitignore  check-versions.sh  git2cl  make-dist.sh  pyenv-versions  release.sh
mathics_django/: __init__.py  asgi.py  docpipeline.py  manage.py  server.py  settings.py  test.py  test_django.py  urls.py  version.py
mathics_django/autoload/: settings.m
mathics_django/doc/: .gitignore  __init__.py  django_doc.py  doc.py  utils.py
mathics_django/web/: __init__.py  authentication.py  format.py  forms.py  models.py  urls.py  views.py
mathics_django/web/controllers/: __init__.py  about.py  doc.py
mathics_django/web/media/css/: font-awesome.min.css  styles.css
mathics_django/web/media/img/: README.md
mathics_django/web/media/js/: .gitignore  authentication.js  autocomplete.js  doc.js  graphics3d.js  inout.js  mathics.js  message.js  utils.js
mathics_django/web/media/js/earcut/: earcut.min.js
mathics_django/web/media/js/mathics-threejs-backend/: index-no-custom-shader.js  index.js  version-no-custom-shader.js  version.json
mathics_django/web/media/js/mathjax/: core.js  loader.js  mml-chtml-nofont.js  mml-chtml.js  mml-svg-nofont.js  mml-svg.js  node-main.js  package.json  startup.js  tex-chtml-nofont.js  tex-chtml.js  tex-mml-chtml-nofont.js  tex-mml-chtml.js  tex-mml-svg-nofont.js  tex-mml-svg.js  tex-svg-nofont.js  tex-svg.js
mathics_django/web/media/js/mathjax/a11y/: assistive-mml.js  complexity.js  explorer.js  semantic-enrich.js  speech.js  sre.js
mathics_django/web/media/js/mathjax/adaptors/: jsdom.js  linkedom.js  liteDOM.js
mathics_django/web/media/js/mathjax/input/: asciimath.js  mml.js  tex-base.js  tex.js
mathics_django/web/media/js/mathjax/input/mml/: entities.js
mathics_django/web/media/js/mathjax/input/mml/extensions/: mml3.js  mml3.sef.json
mathics_django/web/media/js/mathjax/input/tex/extensions/: action.js  ams.js  amscd.js  autoload.js  bbm.js  bboldx.js  bbox.js  begingroup.js  boldsymbol.js  braket.js  bussproofs.js  cancel.js  cases.js  centernot.js  color.js  colortbl.js  colorv2.js  configmacros.js  dsfont.js  empheq.js  enclose.js  extpfeil.js  gensymb.js  html.js  mathtools.js  mhchem.js  newcommand.js  noerrors.js  noundefined.js  physics.js  require.js  setoptions.js  (+8 more)
mathics_django/web/media/js/mathjax/output/: chtml.js  svg.js
mathics_django/web/media/js/mathjax/sre/: speech-worker.js
mathics_django/web/media/js/mathjax/sre/mathmaps/: af.json  base.json  ca.json  da.json  de.json  en.json  es.json  euro.json  fr.json  hi.json  it.json  ko.json  nb.json  nemeth.json  nn.json  sv.json
mathics_django/web/media/js/mathjax/ui/: lazy.js  menu.js  no-dark-mode.js  safe.js
mathics_django/web/media/js/three/: three.js  three.min.js
mathics_django/web/migrations/: 0001_initial.py  0002_auto_20200917_2354.py  0003_auto_20200921_1835.py  0004_auto_20210425_1408.py
mathics_django/web/templates/: 404.html  500.html  about.html  authentication.html  base.html  base_html.html  inout.html  main.html  welcome.html
mathics_django/web/templates/doc/: base_help.html  base_standalone.html  chapter.html  overview.html  part.html  search.html  section.html  subsection.html
mathics_django/web/templatetags/: doc.py
test/: helper.py  test_evaluation.py
(+40 files in other folders)
